--- a/General Assembly Capstone/ReadMe
+++ b/General Assembly Capstone/ReadMe
@@ -1,1 +1,5 @@
-Temp
+<h2>Welcome to my GA Capstone Github </h2>
+
+<p> You can find my EDA work in the <strong>Capstone_EDA.ipynb</strong> file</p>
+
+<p> You can find my models in the <strong>Capstone_Models.ipynb</strong> file</p>
